해당 글 페이지 구현, 댓글 구현, 나머지 구현 중

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -46,6 +46,9 @@
     justify-content: center;
     gap: 8px;
 }
+.reply_wrap{
+    cursor: default;
+}
 .like_wrap svg{
     fill: var(--gray4);
 }
