--- a/src/css/content.css
+++ b/src/css/content.css
@@ -55,13 +55,22 @@
 .content_box .reply_wrap{
     cursor: default;
 }
-.comment_box .parent_wrap{
+.comment_box .parent_wrap,
+.comment_list .recomm_wrap{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.comment_box #parent_comment{
+.recomm_wrap{
+    margin-top: 20px;
+    display: none !important;
+}
+.recomm_on{
+    display: flex !important;
+}
+.comment_box #parent_comment,
+.recomm_wrap #recomm_comment{
   width: calc(100% - 40px) !important;
   height: 60px;
   max-height: 300px;
@@ -74,16 +83,19 @@
   font-size: var(--normal-font-size);
   overflow-y: hidden;
 }
-.comment_box #parent_comment::placeholder{
+.comment_box #parent_comment::placeholder,
+.recomm_wrap #recomm_comment::placeholder{
   color: var(--gray3);
   opacity: 1;
 }
-.comment_box #parent_comment:focus{
+.comment_box #parent_comment:focus,
+.recomm_wrap #recomm_comment:focus{
   outline: none;
 }
-.comment_box .parent_submit{
+.comment_box .parent_submit,
+.recomm_wrap .recomm_submit{
     width: 40px;
-    height: 100%;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content:end;
@@ -91,6 +103,10 @@
 .comment_list{
     padding: 20px 0;
     border-bottom: 1px solid var(--gray1);
+}
+.child_comment_list>.comment_list{
+    border-bottom: none;
+    border-top: 1px solid var(--gray1);
 }
 .comment_wrap ul{
     margin-top: 20px;
@@ -107,6 +123,9 @@
     margin-top: 20px;
     font-size: 14px;
     color: var(--gray4);
+}
+.child_comment_list{
+    padding-left: 40px;
 }
 .like_wrap svg{
     fill: var(--gray4);
