게시글 수정 및 마이페이지 데이터 get 테스트

--- a/src/css/content.css
+++ b/src/css/content.css
@@ -133,3 +133,15 @@
 .like_active{
     fill: var(--point) !important;
 }
+.identifier{
+    font-size: 12px;
+    color: white;
+    padding: 4px 10px;
+    border-radius: var(--border-radius);
+}
+.mycomment{
+    background-color: var(--point);
+}
+.writer{
+    background-color: var(--gray3);
+}
