--- a/src/css/mypage.css
+++ b/src/css/mypage.css
@@ -71,7 +71,8 @@
   gap: 20px;
   margin-left: 20px;
 }
-.post_list .bottom_wrap button{
+.post_list .bottom_wrap button,
+.post_list .bottom_wrap a{
   display: flex;
   align-items: center;
   justify-content: center;
