--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -49,6 +49,7 @@ button{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    position: relative;
 }
 #header{
     width: 100%;
@@ -116,17 +117,15 @@ button{
 }
 #footer{
     width: 100%;
-    height: 70px;
+    padding: 40px;
     background-color: var(--gray1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .a_on{
     color: black !important;
 }
 .svg_on{
     fill: black !important;
-}
-#footer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
